update necessary components

--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -7,5 +7,6 @@
     <h2>Recommended for you</h2>
     <h3>Model: {{ model }}</h3>
     <p>User: {{ user }}</p>
+    <p>Recommendation: {{ dataframe|safe }}</p>
 </body>
 </html>
