--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -7,6 +7,7 @@
     <h2>Recommended for you</h2>
     <h3>Model: {{ model }}</h3>
     <p>User: {{ user }}</p>
+    <p>Taken courses: {{courses}}</p>
     <p>Recommendation: {{ dataframe|safe }}</p>
 </body>
 </html>
