--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -7,7 +7,12 @@
     <h2>Recommended for you</h2>
     <h3>Model: {{ model }}</h3>
     <p>User: {{ user }}</p>
-    <p>Taken courses: {{courses}}</p>
+    <p>Taken courses:</p>
+    <ul>
+        {% for course in courses %}
+            <li>{{ course }}</li>
+        {% endfor %}
+    </ul>
     <p>Recommendation: {{ dataframe|safe }}</p>
 </body>
 </html>
