--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-<h2>Upload File</h2>
+<h1>Ken's Lifelong Education</h1>
 <p>Select a file to upload:</p>
 <form method="POST" enctype="multipart/form-data" action="/">
     <input type="file" id="myFile" name="filename">
