--- a/templates/predata.html
+++ b/templates/predata.html
@@ -6,7 +6,8 @@
 <body>
 
 <h2>Pick an approach to and type a desired username</h2>
-<p>Filename: {{ filename }}</p>
+<p>My User Item Dataset: {{ ui_dataset }}</p>
+<p>My Item Dataset: {{ i_dataset }}</p>
 
 <form method="POST" enctype="multipart/form-data" action="/get-recommendation">
     <h3>TF-IDF recommender</h3>
