--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,7 +4,7 @@
 <h1>Ken's Lifelong Education</h1>
 <form method="POST" enctype="multipart/form-data" action="/">
     <div>
-        <p style="display:inline-block">Upload <b>a user-item</b> dataset:</p>
+        <p style="display:inline-block">Upload <b>a user</b> dataset:</p>
         <input style="display:inline-block" type="file" id="my-user-item" name="my-user-item">
     </div>
     <div>
